# AutoScraper

./: .gitignore  AutoRequestModels.py  AutoScraper-Optimisation.py  AutoScraper.code-workspace  AutoScraper.py  AutoScraperGUI-PyQt.py  AutoScraperGUI.py  AutoScraperPlayWright.py  AutoScraperPlayWrightParallel.py  AutoScraperRequests.py  AutoScraperTest.py  AutoScraperUtil.py  AutoScraper_ALL.py  AutotraderXHR.py  AutotraderXHRTest.py  GetUserQueryXHR.py  GetUserSelection.py  KijijiScraper.py  KijijiSingleScrape.py  ProxyGen.py  README.md  SaveToFile.py  app.py  app_simple.py  auth_decorator.py  celery_config.py  firebase_config.py  future_tests.md  html_test_output.html  output.html  output.json  output1.html  parsed_output.json  proxies_list.txt  requirements.txt  start_app.bat  tasks.py  terms_and_conditions.txt  trigger_task.py  wsgi.py
KijijiResults/: kijijiscraper info.txt
KijijiScraper/: KijijiScraper.py  KijijiSingleScrape.py  KijijiSingleScrapePlaywright.py
autoscraper_py/: AutoScraper.py  GetUserSelection.py  app.py  auth_decorator.py  backend_documentation.md  data_scraping_flow.md  extract_initial_state.py  firebase_config.py  tasks.py  test_autoscraper.py  wsgi.py
autoscraper_py/routes/: api_ai.py  api_data.py  api_payloads.py  api_results.py  api_settings.py  auth.py  views.py
autoscraper_rust/: .env  Cargo.toml  config.toml
autoscraper_rust/src/: auth.rs  auth_middleware.rs  autotrader_api.rs  config.rs  error.rs  firestore.rs  main.rs  models.rs  scraper.rs
autoscraper_rust/src/routes/: api.rs  auth.rs  mod.rs  static_pages.rs
autoscraper_rust/static/: index.js
autoscraper_rust/static/js/: api.js  auth.js  main.js  ui.js
autoscraper_rust/templates/: about.html  index.html  landing.html  login.html  logout.html  terms.html
routes/: api_ai.py  api_data.py  api_payloads.py  api_results.py  api_settings.py  auth.py  payments.py  views.py
static/: index.js
templates/: about.html  index.html  landing.html  login.html  logout.html  payment_cancel.html  payment_success.html  pricing.html  register.html  terms.html
tests/: conftest.py  test_initial_ui.py  test_main.py
tests/data_fetching/: test_fetch_data.py
tests/payload_management/: test_payload_lifecycle.py
tests/ui_elements/: test_dropdowns.py  test_page_elements.py
