[package]
name = "autoscraper_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & Async Runtime
axum = "0.7"
tokio = { version = "1", features = ["full"] } # "full" includes macros, rt-multi-thread, etc.
hyper = { version = "1", features = ["full"] } # Often needed with Axum

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4" # Required by askama derive macro when using axum feature

# Scraping & Data Handling
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cached = "0.52" # For LRU caching

# Configuration
config = { version = "0.14", features = ["toml"] }
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error Handling
anyhow = "1.0"

# JWT Handling & Time
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

# Concurrency Utilities
futures = "0.3"

# Google Cloud / Firebase Auth
yup-oauth2 = "9.0" # For service account authentication
# We'll use reqwest directly for Firestore REST API for now

# Static File Serving & HTTP Utilities
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Firebase (Placeholder - needs investigation for Admin SDK equivalent)
# firebase-rs = "0.5" # Example, might need direct REST calls
